fix border overlap for window bars

--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
 
 .windowbar {
   display: flex;
-  border-top-left-radius: 19px;
-  border-top-right-radius: 20px;
+  border-top-left-radius: 17px;
+  border-top-right-radius: 17px;
   background-color: #b4befe;
   padding: 15px;
 }
